fix(payment): fixed body clipping header

--- a/public/prototipo/payment/styles.css
+++ b/public/prototipo/payment/styles.css
@@ -4,11 +4,11 @@
 }
 
 .container {
-    top: 40px;
+    top: 0;
     position: fixed;
     background-color: white;
     width: 100%;
-    height: 80px;
+    height: 120px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
